--- a/package.json
+++ b/package.json
@@ -3,5 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Sam Marxz <sammarxzz@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev:server": "ts-node-dev --transpile-only src/server.ts"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
