--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --transpile-only src/server.ts"
+    "dev:server": "ts-node-dev --transpile-only --inspect=0.0.0.0:9229 src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
