--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.29"
   }
 }
